# Geant4-Test-Coil

./: .gitignore  README.md
ana/: CMakeLists.txt  ana.cc  build_run.sh  dataAna.ipynb  dataAna.py  fast_build_run.sh  read.sh
ana/scripts/: build.sh  fast_run.sh  run.sh
sim/: CMakeLists.txt  G4Coil.cc  build.sh  compile_flags.txt  fast_job.sh  test.txt  toDoList.txt
sim/fast/: G4Coil  G4History.macro  fast.mac  init_vis.mac
sim/include/: ActionInitialization.hh  CoilTree.hh  ConfigLoader.hh  Data.hh  Detector.hh  DetectorConstruction.hh  Event.hh  EventAction.hh  Generator.hh  Initialization.hh  PrimaryGeneratorAction.hh  Stepping.hh  SteppingAction.hh  ThreadData.hh
sim/models/: Core1.stl  Core1_Clad.stl  Core2.stl  Core2_Clad.stl  Core3.stl  Core3_Clad.stl  Core4.stl  Core4_Clad.stl  Core5.stl  Core5_Clad.stl  Core6.stl  Core6_Clad.stl  G4CoilClad1.stl  G4CoilCore1.stl  clad.stl  core.stl
sim/scripts/: fast.mac  vis.mac
sim/src/: ActionInitialization.cc  CoilTree.cc  ConfigLoader.cc  Data.cc  Detector.cc  DetectorConstruction.cc  Event.cc  EventAction.cc  Generator.cc  Initialization.cc  PrimaryGeneratorAction.cc  Stepping.cc  SteppingAction.cc  ThreadData.cc
